Fix spacing with actual images

--- a/assets/css/details.css
+++ b/assets/css/details.css
@@ -34,7 +34,8 @@ h1 {
 
 .img
 {
-    max-width: 100%;
+    max-width: 90%;
+    max-height: 400px;
     height: auto;
 }
 
